Imroved Advanced settings screen with adaptative titles on check for update depending if you have obtainium or not

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,7 +82,8 @@
     <string name="contributors">Contributors</string>
     <string name="thanks_for_the_inspiration">Thanks for the inspiration, and some part of the code :)</string>
     <string name="app_developer">Lead Developer</string>
-    <string name="check_for_updates_text">Check for release on Github</string>
+    <string name="check_for_updates_github">Check for release on Github</string>
+    <string name="check_for_updates_obtainium">Check for release on Obtainium</string>
     <string name="app_drawer">App Drawer</string>
     <string name="drawer_tab_text">Here you can customize appearance/behavior of you  app drawer</string>
     <string name="set_default_launcher">Set as default launcher</string>
