Added names to icons arg calls + separate lines for easier reading

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,4 +143,5 @@
     <string name="theme_selector">Theme selector</string>
     <string name="everything_ready">Everything Ready!</string>
     <string name="reset_app_icon">Reset App Icon</string>
+    <string name="home">Home</string>
 </resources>
