[IMP] Refactored the alerts dialogs, now uses custom ones that let me have more control on the dialogs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -183,4 +183,6 @@
     <string name="drawer_action_open_first_app">Open first app</string>
     <string name="drawer_action_nothing">Nothing</string>
     <string name="reselect_auto_backup_file">Reselect Auto backup file</string>
+    <string name="transparency">Transparency</string>
+    <string name="save">Save</string>
 </resources>
