--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -214,5 +214,6 @@
     <string name="no_alarm_permission">Alarm access denied</string>
     <string name="no_alarms_set">No alarms</string>
     <string name="show_next_alarm">Show Next Alarm</string>
+    <string name="theme_selector_help">Select a predefined themes, you can backup your settings and propose you theme in a pull request on github</string>
 
 </resources>
