[FEAT] Added option to toggle points auto sepraration on settings screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -229,4 +229,5 @@
     <string name="dragon_launcher_settings">Dragon Launcher Settings</string>
     <string name="lock">Lock</string>
     <string name="reload_apps">Reload Apps</string>
+    <string name="auto_separate">Auto Separate</string>
 </resources>
