[IMP] Refacrored UI to use custom iconButton, both in settings and in widgets screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -238,4 +238,13 @@
     <string name="widgets_empty">No widgets added yet. Tap + to add one!</string>
     <string name="move_widget_up">Move Up</string>
     <string name="move_widget_down">Move Down</string>
+    <string name="delete_widget">Delete widget</string>
+    <string name="select_previous_widget">Select previous widget</string>
+    <string name="select_next_widget">Select next widget</string>
+    <string name="add_point">Add Point</string>
+    <string name="remove_point">Remove Point</string>
+    <string name="copy_point">Copy Point</string>
+    <string name="move_point_to_right">Move point to right</string>
+    <string name="move_point_to_left">Move point to left</string>
+    <string name="toggle_drag_cdistances_editing">Toggle drag circle editing</string>
 </resources>
