[IMP] Added some translations for untranslated strings

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -262,4 +262,25 @@
     <string name="rotation">Rotation</string>
     <string name="scale_x">Maßstab X</string>
     <string name="scale_y">Scale Y</string>
+    <string name="open_app">Open App</string>
+    <string name="open_url">Offene URL</string>
+    <string name="open_file">Datei öffnen</string>
+    <string name="select_app">App auswählen</string>
+    <string name="enter_url">URL eingeben</string>
+    <string name="invalid_url">Ungültige URL</string>
+    <string name="unselected_action">Nicht ausgewählte Aktion</string>
+    <string name="selected_action">Ausgewählte Aktionen</string>
+    <string name="haptic_feedback">Haptische Rückkopplung</string>
+    <string name="text_emoji">Text / Emoji</string>
+    <string name="rgb_loading_settings">RGB-Ladeeinstellungen</string>
+    <string name="rgb_line_selector">RGB-Zeilenwähler</string>
+    <string name="show_app_launch_preview">Startvorschau der Show App</string>
+    <string name="show_app_circle_preview">Show App Circle Vorschau</string>
+    <string name="show_app_line_preview">Show App Line Vorschau</string>
+    <string name="show_app_angle_preview">App Angle Vorschau anzeigen. %1$s</string>
+    <string name="do_you_hate_it">„Hasst du es\?“</string>
+    <string name="show_app_icon_angle_preview_in_center_of_start_dragging_position">Zeigen Sie die Winkelvorschau des App-Symbols in der Mitte der Startposition des Ziehens an</string>
+    <string name="line_preview_snap_to_action">Die Linienvorschau lässt sich an die Aktion anpassen</string>
+    <string name="icon_packs_found">%1$d Icon-Pakete gefunden</string>
+    <string name="default_text">Standard</string>
 </resources>
