--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -262,4 +262,25 @@
     <string name="rotation">Rotação</string>
     <string name="scale_x">Escala X</string>
     <string name="scale_y">Escala Y</string>
+    <string name="open_app">Open App</string>
+    <string name="open_url">URL aberta</string>
+    <string name="open_file">Abrir Arquivo</string>
+    <string name="select_app">Selecionar o App</string>
+    <string name="enter_url">Insira o URL</string>
+    <string name="invalid_url">URL inválido</string>
+    <string name="unselected_action">Ação não selecionada</string>
+    <string name="selected_action">Ação selecionada</string>
+    <string name="haptic_feedback">Feedback tátil</string>
+    <string name="text_emoji">Texto/Emoji</string>
+    <string name="rgb_loading_settings">Configurações de carregamento RGB</string>
+    <string name="rgb_line_selector">Seletor de linha RGB</string>
+    <string name="show_app_launch_preview">Mostrar visualização de inicialização do aplicativo</string>
+    <string name="show_app_circle_preview">Mostrar visualização do círculo do aplicativo</string>
+    <string name="show_app_line_preview">Mostrar visualização da linha do aplicativo</string>
+    <string name="show_app_angle_preview">Mostrar visualização do ângulo do aplicativo. %1$s</string>
+    <string name="do_you_hate_it">\"Você odeia isso\?\"</string>
+    <string name="show_app_icon_angle_preview_in_center_of_start_dragging_position">Mostrar visualização do ângulo do ícone do aplicativo no centro da posição inicial de arrastar</string>
+    <string name="line_preview_snap_to_action">Visualização de linha instantânea para ação</string>
+    <string name="icon_packs_found">%1$d pacotes de ícones encontrados</string>
+    <string name="default_text">Padrão</string>
 </resources>
