[FEAT] Usage of system wallpaper by default, removed blur and separated wallpaper cause too difficult to handle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -288,4 +288,5 @@
     <string name="every_setting_will_return_to_its_default_state_this_cannot_be_undone_the_app_will_kill_itself">EVERY setting will return to its default state, this cannot be undone, the app will kill itself</string>
     <string name="reset_all_settings">Reset ALL settings ?!</string>
     <string name="experimental">Experimental</string>
+    <string name="set_wallpaper">Set Wallpaper</string>
 </resources>
